<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@">

    <androidx.cardview.widget.CardView
        android:id="@+id/meals"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:clickable="true"
        android:onClick="@"
        android:focusable="true"
        app:cardBackgroundColor="@color/layout1background">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    android:layout_marginLeft="4dp"
    android:layout_marginStart="4dp">

    <TextView
        android:id="@+id/healthy_meals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/healthy_eating"
        android:textColor="@color/design_default_color_background"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/discover_eating_healthy"
        android:textSize="18sp"
        android:textColor="@color/design_default_color_background"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/healthy_meals" />

</androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>



    <androidx.cardview.widget.CardView
        android:id="@+id/drinks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@id/meals"
        tools:layout_editor_absoluteX="16dp"
        app:cardBackgroundColor="@color/colorPrimary" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp">

            <TextView
                android:id="@+id/healthy_drinks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/healthy_drinks"
                android:textColor="@color/design_default_color_background"
                android:textSize="18sp"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/healthy_drinks2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/benefits_eating_healthy"
                android:textSize="18sp"
                android:textStyle="italic"
                android:textColor="@color/design_default_color_background"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/healthy_drinks" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="@color/design_default_color_secondary_variant"
        app:layout_constraintTop_toBottomOf="@id/drinks"
        tools:layout_editor_absoluteX="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp">

            <TextView
                android:id="@+id/educate_your_friend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                    android:text="@string/educate_your_friend"
                android:textColor="@color/design_default_color_background"
                android:textSize="18sp"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/educate_your_friend2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/educate_friend_family"
                android:textSize="18sp"
                android:textStyle="italic"
                app:layout_constraintStart_toStartOf="parent"
                android:textColor="@color/design_default_color_background"
                app:layout_constraintTop_toBottomOf="@+id/educate_your_friend" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>